--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
       href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./assets/images/scm-logo.png"
+    />
     <title>Supply Chain Management</title>
     <link
       rel="stylesheet"
