--- a/public/carriers.html
+++ b/public/carriers.html
@@ -73,19 +73,19 @@
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./carriers.html">Carriers</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./ownerOperators.html"
                 >Owner Operators</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./warehouse.html">Warehouse</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
