--- a/public/ownerOperators.html
+++ b/public/ownerOperators.html
@@ -69,23 +69,21 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="./index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="./index.html">Home </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./carriers.html">Carriers</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./ownerOperators.html"
                 >Owner Operators</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="./warehouse.html">Warehouse</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
